# tsimd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  mandelbrot.cpp  mandelbrot.ispc  pico_bench.h
cmake/: clang-format.cmake  clang.cmake  gcc.cmake  icc.cmake  ispc.cmake  msvc.cmake  tsimd.cmake
examples/: CMakeLists.txt  simple_example.cpp
examples/embc/: CMakeLists.txt
examples/embc/simd/: CMakeLists.txt  varying.h  vfloat8_avx.h
examples/embc/sys/: platform.h
examples/mandelbrot/: CMakeLists.txt  mandelbrot.cpp  mandelbrot.ispc
examples/simple_example/: CMakeLists.txt  simple_example.cpp
tests/: CMakeLists.txt  doctest.h  test_pack.cpp
tests/catch/: catch_main.cpp
tsimd/: tsimd.h
tsimd/detail/: bit_reference.h  bool_t.h  config.h  mask_t.h  pack.h  tsimd_traits.h
tsimd/detail/functions/: algorithm.h  math.h  memory.h  random.h
tsimd/detail/functions/algorithm/: all.h  any.h  foreach.h  lane_index.h  near_equal.h  select.h  set_if.h
tsimd/detail/functions/math/: abs.h  ceil.h  cos.h  exp.h  fast_cos.h  fast_sin.h  floor.h  log.h  max.h  min.h  pow.h  rcp.h  rsqrt.h  sin.h  sqrt.h  tan.h
tsimd/detail/functions/memory/: byteswap.h  gather.h  load.h  reverse_bits.h  scatter.h  store.h
tsimd/detail/functions/random/: precomputed_halton_engine.h  uniform_real_distribution.h
tsimd/detail/operators/: arithmetic.h  bitwise.h  logic.h
tsimd/detail/operators/arithmetic/: divide.h  minus.h  modulo.h  negate.h  plus.h  times.h
tsimd/detail/operators/bitwise/: and.h  exclusive_or.h  left_shift.h  or.h  right_shift.h
tsimd/detail/operators/logic/: and.h  disallow_and_or.h  equals.h  greater_than.h  greater_than_or_equal.h  less_than.h  less_than_or_equal.h  not.h  or.h
tsimd/detail/pack/: pack_avx.h
tsimd/detail/traits/: array_for_pack.h  bool_type_for.h  can_convert.h  cast_simd_type.h  enable_if_t.h  half_simd_type.h  is_bool.h  is_floating_point.h  is_mask.h  is_n_bytes.h  is_pack.h  is_pack_of_width.h  is_same_t.h  pack_iterator.h  same_size.h  simd_type.h  valid_pack_scalar_operator.h  valid_type_for_pack.h  valid_type_for_pack_ctor.h
tsimd/detail/utility/: bit_iterator.h  bool_t.h  pack_impl.h
